# GL-playground

./: CMakeLists.txt  README.md  main.cpp
scripts/: main.lua
src/app/: Application.cpp  Application.h
src/app/character/: Character.cpp  Character.h  DirectionalAsset.cpp  DirectionalAsset.h  ICharacter.h  IMovable.cpp  IMovable.h
src/app/script_engine/: IEngine.h  LuaScriptEngine.cpp  LuaScriptEngine.h
src/app/utils/: utils.cpp  utils.h
